--- a/style/headtap.css
+++ b/style/headtap.css
@@ -69,3 +69,31 @@
     margin: 10px auto 0 auto;
     font-size: 16px;
 }
+
+/* 顶部导航栏 */
+.top-bar{
+    width: 100%;
+    background: #545c64;
+    height: 60px;
+    color:#333333;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 50;
+}
+
+.top-menu{
+    margin-right: 100px;
+}
+
+.lt-title{
+    text-align: center;
+    color: #fffef8;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    /* position: fixed; */
+}
