--- a/style/headtap.css
+++ b/style/headtap.css
@@ -1,6 +1,6 @@
 /* 外部样式文件 */
 #backcont {
-    background-image: url(../static/chainsaw.png);
+    background-image: url(../static/subway.png);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -70,6 +70,10 @@
     font-size: 16px;
 }
 
+.big-box{
+    min-height: 100vh;
+}
+
 /* 顶部导航栏 */
 .top-bar{
     width: 100%;
@@ -86,6 +90,12 @@
     z-index: 50;
 }
 
+.body-part{
+    /* height: inherit; */
+    top:60px;
+    bottom: 0px;
+}
+
 .top-menu{
     margin-right: 100px;
 }
@@ -96,4 +106,49 @@
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     /* position: fixed; */
+}
+
+/* 主页定位 */
+.ordering{
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right:0;
+    padding: 10px 0;
+    margin:0 auto;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    /* height: inherit; */
+    bottom: 0px;
+}
+
+.searchInput{
+    padding-top: 30px;
+    padding-bottom: 50px;
+}
+
+/* .awa-tab{
+    padding-top: 200px;
+} */
+
+.table{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    top:0px;
+}
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* position: fixed; */
+    
+    width: 100%;
+    height: 50px;
+    align-self: flex-end;
+    bottom: 0px;
 }
