edit part finished

--- a/style/headtap.css
+++ b/style/headtap.css
@@ -145,3 +145,9 @@
     bottom: 50px;
     align-self: center;
 }
+
+.dialog-foot{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
