--- a/style/headtap.css
+++ b/style/headtap.css
@@ -151,3 +151,9 @@
     justify-content: center;
     align-items: center;
 }
+
+.addAward{
+    margin-bottom: 30px;
+    float: right;
+    margin-right: 30px;
+}
